# Api-Saas-Gapp

./: .dockerignore  .env  .env.template  App.tsx  COMPLETE_DEPLOYMENT_SCRIPT.sh  DEPLOYMENT.md  DEPLOYMENT_INSTRUCTIONS.md  DIRECT_API_FIX.sh  Dockerfile  Dockerfile.frontend  EMERGENCY_FIX.sh  FINAL_CHECKLIST.md  FRONTEND_FIX_GUIDE.md  GMAIL_INTEGRATION_GUIDE.md  IMMEDIATE_API_FIX.sh  MIGRATION_FIX_INSTRUCTIONS.md  PRODUCTION_READY.md  QUICK_FIX_API_ROUTING.md  QUICK_FIX_COMMANDS.md  README.md  TROUBLESHOOTING_GUIDE.md  ULTRA_QUICK_FIX.sh  build-frontend.bat  build-frontend.sh  check-status.sh  clear-cache-rebuild.sh  complete-frontend-fix.sh  deploy-final.sh  deploy.bat  deploy.sh  deploy_old.sh  docker-compose.yml  fix-copy-command.sh  fix-deployment.ps1  fix-deployment.sh  fix-frontend.bat  fix-frontend.sh  fix-installation.sh  fix-poetry.sh  fix-ubuntu-deployment.md  (+33 more)
backend/: .dockerignore  Dockerfile  Dockerfile.old  alembic.ini  crud.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  tasks.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  002_add_advanced_features.py
backend/api/v1/: api.py
backend/api/v1/endpoints/: accounts.py  analytics.py  campaigns.py  data_management.py  health.py  testing.py
backend/core/: config.py
backend/utils/: campaign_optimizer.py  email_sender.py  encryption.py  gmail_service.py  ultra_fast_sender.py
components/icons/: ChartBarIcon.tsx  ChevronLeftIcon.tsx  IconProps.ts  PaperAirplaneIcon.tsx  PauseIcon.tsx  PlayIcon.tsx  PlusIcon.tsx  TrashIcon.tsx  UsersIcon.tsx
components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
components/ui/: Badge.tsx  Button.tsx  Card.tsx  Dialog.tsx  Input.tsx  ProgressBar.tsx  Textarea.tsx  Toast.tsx
components/views/: AccountsView.tsx  AnalyticsView.tsx  DashboardView.tsx  (+5 more)
contexts/: DialogContext.tsx  ToastContext.tsx
services/: api.ts
